--- a/src/layout/l-section/l-section.scss
+++ b/src/layout/l-section/l-section.scss
@@ -1,5 +1,34 @@
 .l-section { 
-    @include flexbox(center, center);
-    flex-direction: column;
-    text-align: center;
+  @include flexbox(center, center);
+  flex-direction: column;
+  text-align: center;
+
+  &--banner {
+    margin-top: 80px;
+    background: url("../img/banner/background.png");
+    background-size: cover;
+    background-position: right;
+    position: relative;
+    height: 550px;
+    
+    &::before {
+      content: "";
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, .75);
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+  }
 }
+
+
+
+// Media queries 
+  // Large screen >750px
+  @mixin l-section--banner--large-screen {
+    .l-section--banner {
+    margin-top: 115px;
+    }
+  }
