--- a/static/main.css
+++ b/static/main.css
@@ -563,17 +563,6 @@ a:hover {
     background-color: #222222; }
 
 /* >> l-section--offer -------------------------------------------------- */
-/* >> l-section--projects -------------------------------------------------- */
-@media only screen and (min-width: 850px) {
-  .l-section--projects {
-    background: url("../img/projects/ipad.png");
-    background-position-x: right;
-    background-position-y: bottom;
-    background-repeat: no-repeat;
-    background-size: 57%; } }
-@media only screen and (min-width: 1200px) {
-  .l-section--projects {
-    background-size: auto; } }
 /* >> l-section--footer -------------------------------------------------- */
 .l-section--footer {
   flex-direction: column-reverse; }
@@ -587,33 +576,28 @@ a:hover {
   max-width: 940px;
   margin: 60px auto;
   z-index: 1; }
-
-@media only screen and (min-width: 1024px) {
-  .l-section__content-wrapper {
-    margin: 100px auto; } }
-.l-section--offer .l-section__content-wrapper {
-  background: url("../img/offer/background.png");
-  width: 100%;
-  max-width: none;
-  margin: 0;
-  padding: 100px 25px;
-  align-self: flex-end;
-  position: relative;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  text-align: left;
-  color: #cccccc; }
-
-.l-section--offer .l-section__content-wrapper::before {
-  content: "";
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.75);
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -100; }
+  .l-section__content-wrapper--side {
+    background: url("../img/offer/background.png");
+    width: 100%;
+    max-width: none;
+    margin: 0;
+    padding: 100px 25px;
+    align-self: flex-end;
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    text-align: left;
+    color: #cccccc; }
+    .l-section__content-wrapper--side::before {
+      content: "";
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.75);
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -100; }
 
 @media only screen and (min-width: 970px) {
   .l-section--offer .l-section__content-wrapper {
@@ -646,6 +630,9 @@ a:hover {
       position: relative;
       flex-direction: row; } }
 
+@media only screen and (min-width: 1024px) {
+  .l-section__content-wrapper {
+    margin: 100px auto; } }
 /* __ l-section__content-wrapper--small-margin -------------------------------------------------- */
 .l-section__content-wrapper--margin-small {
   margin: 60px auto; }
