Change modifier name

--- a/src/layout/l-wrapper/_l-wrapper.scss
+++ b/src/layout/l-wrapper/_l-wrapper.scss
@@ -4,7 +4,7 @@
     margin: 60px auto;
     z-index: 1;
   
-  &--margin-xsmall {
+  &--margin-tiny {
     margin: 40px auto;
   }
   
@@ -78,7 +78,7 @@
       &--margin-small {
         margin: 60px auto;
       }
-      &--margin-xsmall {
+      &--margin-tiny {
         margin: 40px auto;
       }
     }
