--- a/src/layout/l-wrapper/_l-wrapper.scss
+++ b/src/layout/l-wrapper/_l-wrapper.scss
@@ -67,7 +67,7 @@
     }
   }
 
-  // X-large screen size >1024px
+  // Wide screen >1024px
   @mixin l-wrapper--screen-size_wide {
     .l-wrapper {
       margin: 100px auto;
