--- a/src/blocks/button/_button.scss
+++ b/src/blocks/button/_button.scss
@@ -33,6 +33,7 @@
     padding: 0 10px;
     &:hover .button__icon {
       stroke: $grey-lvl8;
+      transition: all 300ms linear;
     }
   }
   
@@ -47,7 +48,7 @@
     stroke-linejoin: miter;
     stroke-linecap: butt;
     fill: none;
-    transition: all 300ms linear;
+      transition: all 300ms linear;
   }
 
 // Icon inside button (humburger or cross) depends on 
@@ -60,7 +61,7 @@
       .button__icon--close line {
           opacity: 1;
           transform: translateY(0);
-          transition: all 300ms linear;
+          transition: transform 300ms linear;
       }
     }
 
